# storage-api

./: .env.example  .gitignore  Dockerfile  README  docker-compose.yml  dynamic.yaml  pyproject.toml  traefik.yaml
scripts/: compile_database.py
src/: main.py
src/core/: config.py
src/core/methods/: __init__.py  authentication.py  database.py  lifespan.py  logging.py  response.py
src/core/middleware/: logger.py
src/core/models/: __init__.py  arrivals.py  categories.py  object_units.py  objects.py  sale_orders.py  suppliers.py  transfers.py  user.py  warehouses.py  write_offs.py
src/core/objects/: database.py
src/core/schemas/: __init__.py  pagination.py  user.py
src/core/schemes/: __init__.py
src/core/utils/: openapi.py
src/modules/: api.py
src/modules/v1/: api.py
src/modules/v1/arrivals/: api.py
src/modules/v1/arrivals/arrival/: api.py  schemes.py
src/modules/v1/catalog/: api.py  schemes.py
src/modules/v1/categories/: api.py  schemas.py
src/modules/v1/categories/category/: api.py
src/modules/v1/object_units/: api.py
src/modules/v1/object_units/object_unit/: api.py
src/modules/v1/objects/: api.py  schemes.py
src/modules/v1/objects/object/: api.py
src/modules/v1/reservations/: api.py
src/modules/v1/reservations/reservation/: api.py
src/modules/v1/sale_orders/: api.py
src/modules/v1/sale_orders/sale_order/: api.py  (+1 more)
src/modules/v1/suppliers/: api.py  schemas.py  schemes.py
src/modules/v1/transfers/: api.py
src/modules/v1/warehouses/: api.py  repositories.py  schemas.py  schemes.py
src/modules/v1/write_offs/: api.py
(+8 files in other folders)
